# streamlit-chat-with-data

./: README.md  app.py  pyproject.toml
utils/: __init__.py  data.py  dataframe.py  llm_providers.py
utils/custom_components/: __init__.py  dataframe_preview_component.py
