[project]
name = "streamlit-chat-with-data"
version = "0.1.0"
description = "App to talk with your data."
authors = [
    {name = "ethanlchristensen",email = "ethanlchristensen@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "streamlit-rich-message-history (>=0.1.6,<0.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "streamlit-extras (>=0.6.0,<0.7.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "streamlit_chat_with_data"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
